added tag line and LinkedIn profile

--- a/about.html
+++ b/about.html
@@ -21,10 +21,12 @@
 
 <body style="text-align: center; background: #1e1e1e; color: #cedada;">
     <h1>About Borg Queen</h1>
+    
+    <h2>Innovative GPU cloud</h2>
 
     <div class="content">
         <p>
-            Founded: February 2023 by Victor Nova
+            Founded: February 2023 by <a href="https://www.linkedin.com/in/victor-msu/">Victor Nova</a>
             <br />
             Incorporated: July 2023
         </p>
