--- a/connect/GOG.com.html
+++ b/connect/GOG.com.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="canonical" href="https://borg.games/connect/GOG.com"/>
+    <link rel="canonical" href="https://legacy.borg.games/connect/GOG.com"/>
 
     <link rel="shortcut icon" href="/favicon.svg" sizes="any" type="image/svg+xml"/>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
